# QualiSR-Lab

./: .gitignore  Dockerfile  MANIFEST.in  README.md  apply_pca.py  environment.yml  get_image_features.py  pyproject.toml  regressors.ipynb  reproduce_pipeline.sh  requirements.txt
configs/: default.json  pipeline.json
dataset/: labels.csv  readme.md
features/: fr@grounding.csv  noise.csv  nr@grounding.csv  readme.md  references.md  siglip@grounding.csv
features/pca/: resnet@grounding_pca10.csv  resnet@grounding_pca25.csv  resnet@grounding_pca5.csv  resnet@grounding_pca50.csv  resnet@grounding_pca75.csv  vgg@grounding_pca10.csv  vgg@grounding_pca100.csv  vgg@grounding_pca25.csv  vgg@grounding_pca5.csv  vgg@grounding_pca50.csv  vgg@grounding_pca75.csv
plots/example@pca5/: config.json  correlations.csv  dataset_snapshot.csv  feature_correlations.csv  feature_cross_correlations.csv  shap_mean_abs_catboost.csv  shap_values_randomforest.csv  shap_values_xgb.csv
plots/example@pca5/feature_analysis/: feature_analysis_metrics.csv
plots/example@pca5/feature_selection/: feature_selection.csv
plots/example@pca5/metadata/: config.json
plots/example@pca5/outliers/: feature_outliers.csv  prediction_outliers.csv
plots/example@pca5/predictions/: predictions_catboost.csv  predictions_randomforest.csv  predictions_xgb.csv
plots/example@pca5/shap/: shap_mean_abs_randomforest.csv  shap_mean_abs_xgb.csv  shap_values_catboost.csv
qualisr/: __init__.py  __main__.py  api.py  cli.py  features.py  pca.py  pipeline.py  profiling.py  references.py  regressors.py  statistics.py
qualisr/configs/: default.json  pipeline.json
qualisr/sample_data/: __init__.py
qualisr/sample_data/features/: __init__.py
qualisr/sample_data/features/pca/: __init__.py
qualisr/sample_data/scores/: __init__.py  fn_scores.csv  labels.csv
qualisr_lab/: cli.py  pipeline.py  regressors.py
realtime_sr/RLFN/: inference-RLFN.py  rlfn-tuned-4x.pth
realtime_sr/SPAN/: inference-SPAN.py
scripts/: compute_shap.py  compute_shap_catboost.py  compute_statistics.py  get_image_features.py  make_reference.py
stats/: grounding_stats@coarse.csv
tests/: test_package_smoke.py
