[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qualisr-lab"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Oleg Ryabinin", email = "oleg.ryabinin@graphics.cs.msu.ru" },
  { name = "Evgeney Bogatyrev", email = "evgeney.bogatyrev@graphics.cs.msu.ru" },
  { name = "Khaled Abud", email = "khaled.abud@graphics.cs.msu.ru" },
  { name = "Dmitriy Vatolin", email = "dmitriy@graphics.cs.msu.ru" }
]
description = "A toolkit for extracting IQA features, training regressors, and analyzing super-resolution image quality against human scores."
keywords = ["image-quality-assessment", "super-resolution", "reduced-reference", "multimedia"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "icecream>=2.1",
  "matplotlib>=3.8",
  "numpy>=1.24",
  "pandas>=2.0",
  "pillow>=10.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "tqdm>=4.66",
]

[project.optional-dependencies]
regressors = [
  "catboost>=1.2",
  "lightgbm>=4.0",
  "shap>=0.45",
  "xgboost>=2.0",
]
features = [
  "huggingface-hub[cli]>=0.23",
  "pyiqa>=0.1.15",
  "timm>=1.0",
  "torch>=2.2",
  "torchvision>=0.17",
  "transformers>=4.40",
]
notebook = [
  "ipykernel>=6.0",
  "jupyter>=1.0",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/sangwyn/QualiSR-Lab"
Repository = "https://github.com/sangwyn/QualiSR-Lab"

[project.scripts]
qualisr = "qualisr_lab.cli:main"
qualisr-make-reference = "qualisr_lab.cli:make_reference_main"
qualisr-extract-features = "qualisr_lab.cli:extract_features_main"
qualisr-apply-pca = "qualisr_lab.cli:apply_pca_main"
qualisr-compute-stats = "qualisr_lab.cli:compute_stats_main"
qualisr-run-regressors = "qualisr_lab.cli:run_regressors_main"
qualisr-run-pipeline = "qualisr_lab.cli:run_pipeline_main"

[tool.setuptools]
packages = ["qualisr_lab", "scripts"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
